--- a/ivy.xml
+++ b/ivy.xml
@@ -31,5 +31,6 @@
     	<!-- dependency conf="lib->default" org="org.reflections" name="reflections" rev="0.9.10" /-->
     	<!-- Third party library downloaded from ProM library. -->
     	<!-- dependency conf="lib->default" org="prom-libs" name="opencsv" rev="2.4-patched" transitive="false" /--> 
+    <dependency org="de.uni.freiburg.iig.telematik" name="SEWOL" rev="1.0.0"/>
     </dependencies>
 </ivy-module>
