--- a/ivy.xml
+++ b/ivy.xml
@@ -19,6 +19,8 @@
        <dependency org="prom" name="Log" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="SimpleLogOperations" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="DecomposedReplayer" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="BPMN" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="AntiAlignments" rev="latest" changing="true" transitive="true" />
        <dependency org="de.uni.freiburg.iig.telematik" name="SEWOL" rev="1.0.0"/>
     </dependencies>
 </ivy-module>
