--- a/ivy.xml
+++ b/ivy.xml
@@ -16,11 +16,12 @@
        <dependency org="prom" name="ProcessTree" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="HybridILPMiner" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="PNetReplayer" rev="latest" changing="true" transitive="true" />
-       <dependency org="prom" name="Log" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="BasicUtils" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="GraphViz" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="SimpleLogOperations" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="DecomposedReplayer" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="BPMN" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="AntiAlignments" rev="latest" changing="true" transitive="true" />
-       <dependency org="de.uni.freiburg.iig.telematik" name="SEWOL" rev="1.0.0"/>
+       <dependency org="org.apache.commons" name="commons-csv" rev="1.8" changing="true" transitive="true" />
     </dependencies>
 </ivy-module>
