--- a/ivy.xml
+++ b/ivy.xml
@@ -11,6 +11,7 @@
     <dependencies defaultconf="default">
        <dependency org="prom" name="ProM-Plugins" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="Log" rev="latest" changing="true" transitive="true" />
+       <dependency org="prom" name="Alignment" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="PetriNets" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="EvolutionaryTreeMiner" rev="latest" changing="true" transitive="true" />
        <dependency org="prom" name="ProcessTree" rev="latest" changing="true" transitive="true" />
