added sample based

--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="lib" path="C:/Program Files (x86)/LPSolve IDE"/>
 	<classpathentry kind="lib" path="C:/Users/I519745/Desktop/Thesis/Thesis/split-miner-2.0/sm2.jar" sourcepath="C:/Users/I519745/Desktop/Thesis/Thesis/split-miner-2.0"/>
 	<classpathentry kind="lib" path="C:/Users/I519745/Desktop/Thesis/Thesis/structuredminer/StructuredMiner.jar"/>
-	<classpathentry kind="lib" path="/IncrementalPM" sourcepath="/IncrementalPM"/>
+	<classpathentry kind="lib" path="C:/gurobi911/win64/lib/gurobi.jar"/>
+	<classpathentry kind="lib" path="C:/Users/I519745/Downloads/incrementalpm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
